--- a/PaginaAI/index.html
+++ b/PaginaAI/index.html
@@ -501,6 +501,9 @@ button:hover {
             <div class="carousel-item">
                 <img src="https://i.pinimg.com/564x/5f/ed/b0/5fedb0922ec698988d8acdd46bf728e6.jpg" alt="Sala 4">
             </div>
+            <div class="carousel-item"></div>
+                <img src="https://i.pinimg.com/564x/5f/ed/b0/5fedb0922ec698988d8acdd46bf728e6.jpg" alt="Sala 4">
+            </div>
             
         </div>
         <div class="carousel-controls">
@@ -588,3 +591,4 @@ document.addEventListener('DOMContentLoaded', () => {
 
 </html>
 
+<!-- kmvmekmfkv -->
