--- a/pf/index.html
+++ b/pf/index.html
@@ -56,7 +56,7 @@
     <br>
 
     <div class="news-section">
-        <h2>Últimas Noticias</h2>
+        <h2>-- Últimas Noticias --</h2>
         <div class="news-container">
             <div class="news-item">
                 <img src="https://i.pinimg.com/736x/6f/71/09/6f710903127cd2957434ea1759b8d96d.jpg" alt="Noticia 1">
