--- a/pf/PaginaPrincipal/index.html
+++ b/pf/PaginaPrincipal/index.html
@@ -6,6 +6,9 @@
     <title>GameHub</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Honk&family=Inconsolata&family=Jersey+10&family=Jersey+15&family=Monoton&family=Poppins:wght@400;700&family=Roboto:ital,wght@1,100&family=Sedgwick+Ave+Display&family=Tilt+Prism&family=Tiny5&display=swap" rel="stylesheet">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Honk&family=Inconsolata&family=Monoton&family=Poppins:wght@400;700&family=Roboto:ital,wght@1,100&family=Sedgwick+Ave+Display&family=Tilt+Prism&family=Tiny5&display=swap" rel="stylesheet">
 </head>
@@ -13,11 +16,11 @@
     <header class="header">
         <nav class="navbar">
             <ul class="nav-links">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Categorías</a></li>
+                <li><a href="../index.html">Home</a></li>
+                <li><a href="../Noticias/noticias.html">About</a></li>
+                <li><a href="../Categorías/categorias.html">Categorías</a></li>
             </ul>
-            <h1 class="logo">GameHub</h1>
+            <h1 class="logo" href="">GameHub</h1>
             <div class="nav-right">
                 <input type="text" placeholder="Buscador 🔍" class="search-bar">
                 <button class="login-button">Login</button>
@@ -96,10 +99,10 @@
             <div class="footer-section">
                 <h4>Enlaces Rápidos</h4>
                 <ul>
-                    <li><a href="#">Inicio</a></li>
-                    <li><a href="#">Noticias</a></li>
-                    <li><a href="#">Categorías</a></li>
-                    <li><a href="#">Contacto</a></li>
+                    <li><a href="../index.html">Inicio</a></li>
+                    <li><a href="../Noticias/noticias.html">Noticias</a></li>
+                    <li><a href="../Categorías/categorias.html">Categorías</a></li>
+                    <li><a href="../Contacto/contacto.html">Contacto</a></li>
                 </ul>
             </div>
             <div class="footer-section">
